# proval

serial/: CMakeLists.txt
serial/include/: aws103_regs.hpp  client.hpp  message.hpp  safe_io.hpp  serial_comm_args.h  serial_comm_args.hpp  serial_comm_setup.hpp
serial/src/: aws103_regs.cpp  client.cpp  message.cpp  safe_io.cpp
serial/test/: CMakeLists.txt
serial/test/integration/common/include/: stub_server.hpp
serial/test/integration/end_to_end/: main.cpp
serial/test/integration/standalone_client/: main.cpp
serial/test/integration/standalone_server_c/: main.c
serial/test/integration/standalone_server_cpp/: main.cpp
serial/test/unit/encoder/: main.cpp
serial/test/unit/message/: main.cpp
